# rocketapp

./: Cargo.toml  Dockerfile.alpine  Dockerfile.debian  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
src/: main.rs
src/models/: post.rs
src/models/post/: mod.rs  routes.rs
templates/: index.tera
