[package]
name = "rocketapp"
version = "0.1.0"
authors = ["Julian Giamblanco <giamblanco.julian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
openssl = "*"
diesel_migrations = "1.4.0"
serde = {version="1.0.117", features = ["derive"]}
tera = "1.5.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool", "json", "tera_templates"]
